--- a/content.html
+++ b/content.html
@@ -99,13 +99,6 @@
   </li>
 
     </ul>
-      <a href="https://templatedeck.com/stride-html-template.html" data-splitbee-event="Click Download" aria-label="Download this template" class="link-dark pb-1 link-fancy me-2">
-        Download this Template       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download ms-1" viewBox="0 0 16 16">
-                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-              </svg>
-      </a>
-
     </div>
 </div>
 </nav>
@@ -223,7 +216,7 @@
     <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z"/>
   </svg>
   <address class="text-secondary mt-3">
-    <strong>Stride, Inc.</strong><br>
+    <strong>ShaReve, Inc.</strong><br>
     1355 Market St, Suite 900<br>
     San Francisco, CA 94103<br>
     <abbr title="Phone">P:</abbr>
@@ -281,8 +274,6 @@
 </div>
 </div>
 
-<div class="container text-center py-3 small">Made by <a href="https://templatedeck.com" class="link-fancy" target="_blank">templatedeck.com</a>
-</div>
 </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
